--- a/gallery.html
+++ b/gallery.html
@@ -14,76 +14,78 @@
 
 <div id = "page-preloader" class="preloader">
     <div class="loader"></div>
-</div>  
-<div id="container">
-  <ul id="slides">
-    <li class="slide">
-      <div class="slide-partial slide-left"><img src="images/b1_01.jpg"/></div>
-      <div class="slide-partial slide-right"><img src="images/b1_02.jpg"/></div>
-      <h1 class="title"><span class="title-text">Far Cry Primal</span></h1>
-    </li>
-    <li class="slide">
-      <div class="slide-partial slide-left"><img src="images/b2_01.jpg"/></div>
-      <div class="slide-partial slide-right"><img src="images/b2_02.jpg"/></div>
-      <h1 class="title"><span class="title-text">Far Cry 5</span></h1>
-    </li>
-    <li class="slide">
-      <div class="slide-partial slide-left"><img src="images/b3_01.jpg"/></div>
-      <div class="slide-partial slide-right"><img src="images/b3_02.jpg"/></div>
-      <h1 class="title"><span class="title-text">Far Cry 5</span></h1>
-    </li>
-    <li class="slide">
-      <div class="slide-partial slide-left"><img src="images/b4_01.jpg"/></div>
-      <div class="slide-partial slide-right"><img src="images/b4_02.jpg"/></div>
-      <h1 class="title"><span class="title-text">Far Cry New Dawn</span></h1>
-    </li>
-    <li class="slide">
-      <div class="slide-partial slide-left"><img src="images/b5_01.jpg"/></div>
-      <div class="slide-partial slide-right"><img src="images/b5_02.jpg"/></div>
-      <h1 class="title"><span class="title-text">Far Cry 6</span></h1>
-    </li>
-    <li class="slide">
-      <div class="slide-partial slide-left"><img src="images/b6_01.jpg"/></div>
-      <div class="slide-partial slide-right"><img src="images/b6_02.jpg"/></div>
-      <h1 class="title"><span class="title-text">Far Cry 5</span></h1>
-    </li>
-    <li class="slide">
-      <div class="slide-partial slide-left"><img src="images/b7_01.jpg"/></div>
-      <div class="slide-partial slide-right"><img src="images/b7_02.jpg"/></div>
-      <h1 class="title"><span class="title-text">Far Cry 4</span></h1>
-    </li>
-    <li class="slide">
-      <div class="slide-partial slide-left"><img src="images/b9_01.jpg"/></div>
-      <div class="slide-partial slide-right"><img src="images/b9_02.jpg"/></div>
-      <h1 class="title"><span class="title-text">Far Cry Primal</span></h1>
-    </li>
-    <li class="slide">
-      <div class="slide-partial slide-left"><img src="images/b11_01.jpg"/></div>
-      <div class="slide-partial slide-right"><img src="images/b11_02.jpg"/></div>
-      <h1 class="title"><span class="title-text">Far Cry 6</span></h1>
-    </li>
-  </ul>
-  <ul id="slide-select">
-    <li class="font1">          
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <font size = "4"><b><a class="font1" href="index.html">Назад</a></b></font>
-      </a>
-    </li>
-    <li class="selector"></li>
-    <li class="selector"></li>
-    <li class="selector"></li>
-    <li class="selector"></li>
-    <li class="selector"></li>
-    <li class="selector"></li>
-    <li class="selector"></li>
-    <li class="selector"></li>
-    <li class="selector"></li>
-  </ul>
 </div>
 
+<div class="wrapper"> 
+  <div id="container">
+    <ul id="slides">
+      <li class="slide">
+        <div class="slide-partial slide-left"><img src="images/b1_01.jpg"/></div>
+        <div class="slide-partial slide-right"><img src="images/b1_02.jpg"/></div>
+        <h1 class="title"><span class="title-text">Far Cry Primal</span></h1>
+      </li>
+      <li class="slide">
+        <div class="slide-partial slide-left"><img src="images/b2_01.jpg"/></div>
+        <div class="slide-partial slide-right"><img src="images/b2_02.jpg"/></div>
+        <h1 class="title"><span class="title-text">Far Cry 5</span></h1>
+      </li>
+      <li class="slide">
+        <div class="slide-partial slide-left"><img src="images/b3_01.jpg"/></div>
+        <div class="slide-partial slide-right"><img src="images/b3_02.jpg"/></div>
+        <h1 class="title"><span class="title-text">Far Cry 5</span></h1>
+      </li>
+      <li class="slide">
+        <div class="slide-partial slide-left"><img src="images/b4_01.jpg"/></div>
+        <div class="slide-partial slide-right"><img src="images/b4_02.jpg"/></div>
+        <h1 class="title"><span class="title-text">Far Cry New Dawn</span></h1>
+      </li>
+      <li class="slide">
+        <div class="slide-partial slide-left"><img src="images/b5_01.jpg"/></div>
+        <div class="slide-partial slide-right"><img src="images/b5_02.jpg"/></div>
+        <h1 class="title"><span class="title-text">Far Cry 6</span></h1>
+      </li>
+      <li class="slide">
+        <div class="slide-partial slide-left"><img src="images/b6_01.jpg"/></div>
+        <div class="slide-partial slide-right"><img src="images/b6_02.jpg"/></div>
+        <h1 class="title"><span class="title-text">Far Cry 5</span></h1>
+      </li>
+      <li class="slide">
+        <div class="slide-partial slide-left"><img src="images/b7_01.jpg"/></div>
+        <div class="slide-partial slide-right"><img src="images/b7_02.jpg"/></div>
+        <h1 class="title"><span class="title-text">Far Cry 4</span></h1>
+      </li>
+      <li class="slide">
+        <div class="slide-partial slide-left"><img src="images/b9_01.jpg"/></div>
+        <div class="slide-partial slide-right"><img src="images/b9_02.jpg"/></div>
+        <h1 class="title"><span class="title-text">Far Cry Primal</span></h1>
+      </li>
+      <li class="slide">
+        <div class="slide-partial slide-left"><img src="images/b11_01.jpg"/></div>
+        <div class="slide-partial slide-right"><img src="images/b11_02.jpg"/></div>
+        <h1 class="title"><span class="title-text">Far Cry 6</span></h1>
+      </li>
+    </ul>
+    <ul id="slide-select">
+      <li class="font1">          
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <font size = "4"><b><a class="font1" href="index.html">Назад</a></b></font>
+        </a>
+      </li>
+      <li class="selector"></li>
+      <li class="selector"></li>
+      <li class="selector"></li>
+      <li class="selector"></li>
+      <li class="selector"></li>
+      <li class="selector"></li>
+      <li class="selector"></li>
+      <li class="selector"></li>
+      <li class="selector"></li>
+    </ul>
+  </div>
+</div> 
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
