--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
 </head>
-<body background="media/bg2.jpg">
+<body>   
 <div class="wrapper">
     <div id = "page-preloader"class="preloader">
         <div class="loader"></div>
+    </div>
+
+    <div class="bg">
+        <img src="media/bg2.jpg" alt="">
     </div>
 
     <div>
