--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="bg">
-        <img src="media/bg2.jpg" width="100%" height="100%" alt="">
+        <img src="media/bg2.jpg" alt="">
     </div>
 
     <div>
