--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
 </head>
-<body>   
+<body background="media/bg2.jpg">
 <div class="wrapper">
     <div id = "page-preloader"class="preloader">
         <div class="loader"></div>
-    </div>
-
-    <div class="bg">
-        <img src="media/bg2.jpg" alt="">
     </div>
 
     <div>
