--- a/about us.html
+++ b/about us.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body background="media/bgbl3.jpg">
+<body >
 
     <div id = "page-preloader"class="preloader">
         <div class="loader"></div>
@@ -17,7 +17,7 @@
     <div class="about" id="typewriter">
 
     </div>
-
+<div class="bg3"></div>
 <div>
  <span></span>
  <span></span>
