--- a/history.html
+++ b/history.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
     <link rel="stylesheet" type="text/css" href="css/history.css">
 </head>
-<body background="media/bgbl11.jpg">
+<body>
 
 <div id = "page-preloader"class="preloader">
     <div class="loader"></div>
 </div>
-
+<div class="bg2">
+</div>
 <div class="wrapper">
     <div class="naccs">
         <div class="grid">
