--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
 </head>
 <body >
-    
+    <style>
+        body{
+        background: url(media/bg2.jpg) no-repeat center center fixed;
+        background-size: cover;
+        z-index: 1;
+        }
+    </style>
 <div class="wrapper">
     <div id = "page-preloader"class="preloader">
         <div class="loader"></div>
