--- a/index.html
+++ b/index.html
@@ -3,18 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>FarCry</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/prelod.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
 </head>
-<body >
-    <style>
-        body{
-        background: url(media/bg2.jpg) no-repeat center center fixed;
-        background-size: cover;
-        z-index: 1;
-        }
-    </style>
+<body class="bg1">
+
 <div class="wrapper">
     <div id = "page-preloader"class="preloader">
         <div class="loader"></div>
