--- a/about us.html
+++ b/about us.html
@@ -6,7 +6,7 @@
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css'>
     <link rel="stylesheet" href="css/about us.css">
     <link rel="stylesheet" href="css/link.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/prelod.css">
 
 </head>
 <body >
