--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
 </head>
-<body class="bg1">
+<body>
 
 <div class="wrapper">
     <div id = "page-preloader"class="preloader">
