--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
 </head>
 <body>
-    <style>
+    <style class="bg">
      body{
     background: url(media/bg2.jpg) no-repeat center center fixed;
     background-size: cover;
