--- a/history.html
+++ b/history.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" type="text/css" href="css/history.css">
 </head>
 <body>
-
+<style class="bg2"></style>
 <div id = "page-preloader"class="preloader">
     <div class="loader"></div>
 </div>
-<div class="bg2">
-</div>
+
 <div class="wrapper">
     <div class="naccs">
         <div class="grid">
