--- a/history.html
+++ b/history.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" type="text/css" href="css/history.css">
 </head>
 <body>
-<style class="bg2"></style>
+<style class="bg2">
+</style>
 <div id = "page-preloader"class="preloader">
     <div class="loader"></div>
 </div>
