--- a/history.html
+++ b/history.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
     <link rel="stylesheet" type="text/css" href="css/history.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <style class="bg2">
