--- a/history.html
+++ b/history.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<style class="bg2">
+<style class="bgg">
 </style>
 <div id = "page-preloader"class="preloader">
     <div class="loader"></div>
