--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <style class="bg">
+        body{
+        background: url(media/bg2.jpg) no-repeat center center fixed;
+        background-size: cover;
+        z-index: 1;
+        }
     </style>
 <div class="wrapper">
     <div id = "page-preloader"class="preloader">
