--- a/history.html
+++ b/history.html
@@ -10,6 +10,12 @@
 </head>
 <body>
   <style class="bgg">
+    body{
+  
+  background: url(media/bg2.jpg) no-repeat center center fixed;
+  background-size: cover;
+  z-index: 1;
+    }
   </style>
 <div id = "page-preloader"class="preloader">
     <div class="loader"></div>
