--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
 </head>
-<body background="media/bg2.jpg"  no-repeat center center fixed>
+<body background="media/bg2.jpg">
 <div class="wrapper">
     <div id = "page-preloader"class="preloader">
         <div class="loader"></div>
