--- a/about us.html
+++ b/about us.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/prelod.css">
 
 </head>
-<body >
+<body background="media/bgbl3.jpg">
 
     <div id = "page-preloader"class="preloader">
         <div class="loader"></div>
