--- a/history.html
+++ b/history.html
@@ -8,14 +8,8 @@
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
     <link rel="stylesheet" type="text/css" href="css/history.css">
 </head>
-<body>
-  <style class="bgg">
-    body{
-  
-  background: url(media/bg2.jpg) no-repeat center center fixed;
-  background-size: cover;
-  z-index: 1;
-    }
+<body background="media/bgbl11.jpg">
+ 
   </style>
 <div id = "page-preloader"class="preloader">
     <div class="loader"></div>
